--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,11 +1,18 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+require 'dotenv'
+
+Dotenv.load
+
+VAGRANTFILE_API_VERSION = "2"
+
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
-Vagrant.configure("2") do |config|
+Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
+
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
@@ -53,12 +60,26 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "dev1"
     vb.gui = false
 	  vb.memory = "1024"
 	  vb.cpus = 1
+    vb.customize [
+      "modifyvm", :id,
+      "--hwvirtex", "on",
+      "--audio", "none",
+      "--ioapic", "on",
+      "--nictype1", "virtio"
+    ]
   end
+
+  config.disksize.size = '15GB'
   
+  (0 ... ENV['VM_COUNT'].to_i).each do |i|
+    config.vm.define "dev#{i}" do |host|
+      host.vm.hostname = "dev#{i}"
+    end
+  end
+
   #
   # View the documentation for the provider you are using for more
   # information on available options.
