configure static address

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -44,10 +44,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  config.vm.network "public_network", bridge: [
-    "en4: AX88772",
-    "en0: Wi-Fi (AirPort)"
-  ]
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -77,6 +73,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   (0 ... ENV['VM_COUNT'].to_i).each do |i|
     config.vm.define "dev#{i}" do |host|
       host.vm.hostname = "dev#{i}"
+      host.vm.network "public_network", ip: "192.168.0.3#{i}", bridge: [
+        "en4: AX88772",
+        "en0: Wi-Fi (AirPort)"
+      ]
     end
   end
 
